# book_scout

./: .gitignore  README.md  must_1342209_l.html  pyproject.toml
src/book_scout/: __init__.py  main.py
