[project]
name = "book-scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fcortesbio", email = "fcortesbio@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[project.scripts]
scout = "book_scout.main:main"